# python-project-49

./: Makefile  README.md  demo.cast  pyproject.toml
asciinemas/: calc.cast  even.cast  gcd.cast  greetings.cast  prime.cast  progression.cast
brain_games/: calc_game.py  cli.py  engine.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/engine/: engine.py
brain_games/games/: calc.py  calc_game.py  even.py  even_game.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
