[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Package of mathematical games."
authors = [
"vasco_proger <perpendomobile@gmail.com>"
]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
"Development Status :: 5 - Production/Stable",
"Environment :: Console",
"Natural Language :: English",
"Topic :: Terminals",
"Programming Language :: Python :: 3 :: Only",
"License :: Public Domain"
]
repository = "https://github.com/LAMENTIN28/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
